# Task-Management-System

./: db.sqlite3  pyproject.toml
core/: settings.py  urls.py
expenses/: models.py
expenses/migrations/: 0001_initial.py
users/: apps.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_admin_customuser_role.py
